# droplet

./: .gitignore  Cargo.toml  PRODUCT.md
.github/workflows/: ci.yml
crates/droplet-core/: Cargo.toml
crates/droplet-core/src/: convert.rs  engine_duckdb.rs  lib.rs  registry.rs  sandbox.rs  security_tests.rs  session.rs  source.rs  tool.rs  tools.rs
crates/droplet-core/src/security/: dos_limits.rs  egress.rs  error_safety.rs  exfiltration.rs  handles_args.rs  isolation.rs  memory_safety.rs  mod.rs  result_cap.rs  sandbox_escape.rs  sql_injection.rs  writes_ddl.rs
crates/droplet-core/tests/: analyze_local.rs
crates/droplet-core/tests/data/: sample.parquet
crates/droplet-macros/: Cargo.toml
crates/droplet-macros/src/: lib.rs
crates/droplet-py/: Cargo.toml  pyproject.toml
crates/droplet-py/python/droplet/: __init__.py
crates/droplet-py/python/tests/: test_analyze.py  test_engine.py  test_security.py  test_session.py
crates/droplet-py/src/: lib.rs
docs/roadmap/: 00-rust-warmup.md  M0-skeleton.md  M1-analyze-engine.md  M1-duckdb.md  M10-export-sdk-adapter.md  M2-artifact-cache.md  M2-load-boundary.md  M3-coordination.md  M3-monty-driver.md  M4-droplet-tool-macro.md  M4-monty-driver.md  M5-artifact-cache.md  M5-pydantic-schema.md  M6-connectors-athena.md  M6-field-search.md  M7-coordination.md  M7-snapshot-store.md  M8-sdk-adapter.md  M8-snapshot-resume.md  M9-field-search.md  README.md
docs/security/: 2026-06-24-v1a-local-fs-read-gap.md  2026-06-25-adversarial-suite-findings.md
docs/superpowers/plans/: 2026-06-24-v1a-walking-skeleton.md  2026-06-25-adversarial-test-suite.md
docs/superpowers/specs/: 2026-06-17-roadmap-replan-design.md
xtask/: Cargo.toml
xtask/src/: main.rs
