[workspace]
resolver = "3"
members = ["crates/droplet-core", "crates/droplet-py"]

[workspace.package]
edition    = "2024"
version    = "0.0.1"
license    = "MIT"
repository = "https://github.com/you/droplet"

[workspace.dependencies]
thiserror   = "2.0.18"
serde       = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
tokio       = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
# Pinned to 0.28 (NOT 0.29): monty v0.0.18 transitively pulls pyo3 0.28.x via
# `jiter`, and pyo3-ffi `links = "python"` allows only ONE pyo3 version in the
# graph — so droplet-py must match monty's.
# The `extension-module` feature is deprecated (it disables libpython linking and
# breaks `cargo test`/workspace builds). maturin >= 1.9.4 builds the extension
# module itself (via PYO3_BUILD_EXTENSION_MODULE), so plain cargo links libpython.
pyo3        = { version = "0.28", features = ["abi3-py310"] }
# Pinned to a git TAG (crates.io `monty` 0.0.0 is an unrelated placeholder).
# Pre-1.0; the API churns. First build is long (pulls ty/ruff/salsa).
monty       = { git = "https://github.com/pydantic/monty", tag = "v0.0.18" }
