[package]
name = "droplet-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace   = true
serde.workspace       = true
async-trait.workspace = true
tokio.workspace       = true
monty.workspace       = true
# Optional: the DuckDB local analyze engine compiles ONLY when the `duckdb` feature is on,
# so the default `cargo build -p droplet-core` stays fast (no C++ engine build).
duckdb = { workspace = true, optional = true }

[features]
# Enabling the `duckdb` feature turns on the optional `duckdb` dependency (the `dep:` prefix
# disambiguates the feature name from the crate name). This is the opt-in analyze engine.
duckdb = ["dep:duckdb"]
