[package]
name = "droplet-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace   = true
serde.workspace       = true
async-trait.workspace = true
tokio.workspace       = true
monty.workspace       = true
# The DuckDB local analyze engine is a core, always-on dependency (no longer feature-gated):
# every Droplet build carries the engine, and `droplet-py` binds to it directly. The cost is a
# slow first build (Cargo compiles DuckDB's bundled C++); `Cargo.lock` + CI caching absorb it.
duckdb.workspace = true
