[package]
name = "droplet-macros"
edition.workspace    = true
version.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
proc-macro = true        # this crate exports procedural macros (runs in the compiler)

[dependencies]
syn.workspace         = true
quote.workspace       = true
proc-macro2.workspace = true
